# business_tracker

./: api_client.py  chech_version.py  main.py  pyproject.toml  reputation.db  requirements.txt  setup.md
Company_reputation_tracker (CrewAI studio) 1.1/: setup.md
Company_reputation_tracker (CrewAI studio) 1.2/: README.md
Company_reputation_tracker_v2.1/: company_tracker.db  config.py  init_db.py  requirements.txt  run_pipeline.py
Company_reputation_tracker_v2.1/agents/: mention_fetcher.py  sentiment_agent.py
Company_reputation_tracker_v2.1/database/: db_utils.py  schema.py
Company_reputation_tracker_v2.2/: api_client.py  company_tracker.db  dashboard.py  requirements.txt  runner.py  setup.py
Company_reputation_tracker_v2.2 - VIRKER!!/: README.md  api_client.py  company_tracker.db  dashboard.py  db.py  requirements.txt
Company_reputation_tracker_v2.2_test/: .env  README.md  api_client.py  company_tracker.db  dashboard.py  db.py  logger.py  pipeline_run_report.json  requirements.txt  requirements_minimal.txt  runner.py  setup.py
agents/: mention_fetcher.py  review_agent.py  sentiment_agent.py  trend_agent.py
company_reputation_tracker_v1_2/: pyproject.toml  run_tracker.bat  setup.md
company_reputation_tracker_v1_2/reputation_tracker/: crew.py  main.py
company_reputation_tracker_v1_2/reputation_tracker/config/: agents.yaml
company_reputation_tracker_v1_2/reputation_tracker/tools/: custom_tool.py
dashboard/: app.py
db/: models.py  session.py
reports/: flow.py  generate_pdf.py  notify.py
tools/: crew.py  scheduler.py  tasks.py  tools.py
(+8 files in other folders)
