[project]
name = "is_your_reputation_tracker_part_of_crew_automation"
version = "0.1.0"
description = "is_your_reputation_tracker_part_of_crew_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
is_your_reputation_tracker_part_of_crew_automation = "is_your_reputation_tracker_part_of_crew_automation.main:run"
run_crew = "is_your_reputation_tracker_part_of_crew_automation.main:run"
train = "is_your_reputation_tracker_part_of_crew_automation.main:train"
replay = "is_your_reputation_tracker_part_of_crew_automation.main:replay"
test = "is_your_reputation_tracker_part_of_crew_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
