[project]
name = "company_reputation_tracker"
version = "0.1.0"
description = "Company reputation tracker using CrewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
run_crew = "crewai.main:run"
train = "crewai.main:train"
replay = "crewai.main:replay"
test = "crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
